<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="337dp"
        android:layout_height="537dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        tools:listitem="@layout/recyclerview_item" />

    <Button
        android:id="@+id/button_sort"
        style="@style/button_style"
        android:layout_marginTop="25dp"
        android:onClick="sortRVByRating"
        android:text="@string/button_sort"
        app:layout_constraintBottom_toTopOf="@+id/button_listingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_sortname"
        style="@style/button_style"
        android:layout_marginTop="4dp"
        android:onClick="sortRVByName"
        android:text="@string/button_sortname"
        app:layout_constraintBottom_toTopOf="@+id/button_listingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sort" />

    <Button
        android:id="@+id/button_listingredients"
        style="@style/button_style"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="7dp"
        android:onClick="navToIngredientActivity"
        android:text="@string/button_listingredients"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sortname" />
</androidx.constraintlayout.widget.ConstraintLayout>